# Proyecto-3-Datos-2

./: README.md  TinySQL
ClienteWeb/: index.html  script.js  style.css
QueryProcessing/: SystemCatalog.cpp
StoredDataManager/: IndexBST.h  IndexBTree.cpp  IndexBTree.h  StorageManager.cpp
src/: CMakeLists.txt  main.cpp
src/QueryProcessing/: QueryProcessor.cpp  QueryProcessor.h  SystemCatalog.cpp  SystemCatalog.h
src/StoredDataManager/: IndexBST.cpp  IndexBTree.cpp  StorageManager.cpp  StorageManager.h
src/WebApi/: ApiServer.cpp  ApiServer.h
